--- a/SismologiaGIT/Parcial1/Parcial1_Script.ipynb
+++ b/SismologiaGIT/Parcial1/Parcial1_Script.ipynb
@@ -370,8 +370,8 @@
     "\n",
     "P: 23:34:59 (Tomado de Wilber 3) \\\n",
     "PP: 23:37:13 (Tomado de WIlber 3 y corroborado con los tiempos calculados) \\\n",
-    "SP: 23:43:24 \\\n",
-    "PcP: 23:35:43"
+    "SP: 23:43:24 (Obtenido por cálculos)\\\n",
+    "PcP: 23:35:43 (Obtenido por cálculos)"
    ]
   },
   {
