--- a/SismologiaGIT/Parcial1/Parcial1_Script.ipynb
+++ b/SismologiaGIT/Parcial1/Parcial1_Script.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Actividad: Exploración de fases sísmicas con ObsPy/TauP (versión ray paths circular)\n",
-    "\n",
-    "**Objetivo:** Familiarizarse con las fases sísmicas, modelos 1D de velocidades (`iasp91`, `prem`, `ak135`) y la interpretación de **curvas tiempo–trayecto** y **ray paths** en un esquema **circular** de la Tierra.\n"
+    "# Parcial 1\n",
+    "### Sismo seleccionado: Kamchatka Julio 29, 2025\n",
+    "### Estación seleccionada: JZAX Uzbekistan"
    ]
   },
   {
@@ -26,14 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "475716e9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Ejecuta esta celda si te faltan dependencias (quita el comentario al inicio de cada línea si deseas instalar).\n",
-    "# !pip install obspy matplotlib numpy\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -45,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "id": "a24beb08",
    "metadata": {},
    "outputs": [
@@ -371,7 +368,9 @@
     "P: 23:34:59 (Tomado de Wilber 3) \\\n",
     "PP: 23:37:13 (Tomado de WIlber 3 y corroborado con los tiempos calculados) \\\n",
     "SP: 23:43:24 (Obtenido por cálculos)\\\n",
-    "PcP: 23:35:43 (Obtenido por cálculos)"
+    "PcP: 23:35:43 (Obtenido por cálculos)\n",
+    "\n",
+    "Imagen con los tiempos marcados en los sismogramas en la carpeta como Sismograma.jpg"
    ]
   },
   {
@@ -394,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "id": "975a8621-ba8f-4f04-ac84-9be6811f6475",
    "metadata": {},
    "outputs": [
@@ -415,14 +414,14 @@
        "<Figure size 800x250 with 1 Axes>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "file = read('2025-07-29-mww88off-east-coast-of-kamchatka.miniseed')\n",
-    "file[0].plot()"
+    "file[0].plot()\n"
    ]
   },
   {
