--- a/SismologiaGIT/Proyecto/Proyecto.ipynb
+++ b/SismologiaGIT/Proyecto/Proyecto.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# Proyecto\n",
     "### Pregunta:\n",
-    "Cuál es la trayectori d elas ondas sísmicas medidas desde Panamá del sismo de Kamchatka del 29 de Julio del 2025?"
+    "Cuál es la trayectori de las ondas sísmicas medidas desde Panamá del sismo de Kamchatka del 29 de Julio del 2025?"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "a24beb08",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "a53f5bd7",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "2717c7d6",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "18394593",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "515b7b4c",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "1ddb2402-08a6-479f-9afa-bdd37205725d",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "4879e034-4f45-4e07-9264-4383dddf7bee",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        " 60.60120240480963)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,40 +395,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "id": "ca0755e4-79aa-4e31-9e77-c1f8abeafd79",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "         network: CU\n",
-       "         station: BCIP\n",
-       "        location: 00\n",
-       "         channel: BH1\n",
-       "       starttime: 2025-07-29T23:37:33.019538Z\n",
-       "         endtime: 2025-07-30T00:08:32.994538Z\n",
-       "   sampling_rate: 40.0\n",
-       "           delta: 0.025\n",
-       "            npts: 74400\n",
-       "           calib: 1.0\n",
-       "         _format: MSEED\n",
-       "           mseed: AttribDict({'dataquality': 'M', 'number_of_records': 256, 'encoding': 'STEIM2', 'byteorder': '>', 'record_length': 512, 'filesize': 395776})"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "file = read('2025-07-29mww88off-east-coast-of-kamchatka.miniseed')\n",
-    "file[0].stats"
+    "file.plot(outfile=\"sismogramas_crudos.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "id": "b5e83143-57ae-4263-bd9d-eca5320439f2",
    "metadata": {},
    "outputs": [
@@ -463,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "id": "a7e789ca-55e9-4230-8624-d4b0e5afd696",
    "metadata": {},
    "outputs": [
@@ -474,7 +452,7 @@
        "       20299.00593686, 20299.00593715, 20299.00593744])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
